<resources>
    <string name="app_name">DemoApp</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="log_in">Log In</string>
    <string name="insert_form_using_this_button">insert form using this Button</string>
    <string name="date">date</string>
    <string name="gender">gender</string>
    <string name="aproval">Aproval</string>
    <string name="reject">Reject</string>
    <string name="username">Username</string>
</resources>
